Fixed Overflow in SideMenu

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,8 @@
   padding: 20px 0px !important;
 }
 
+.no-scrollbar {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
